...
            "state" : "translated",
            "value" : "Historique de l’allée"
          }
        }
      }
    },
    "Aisles" : {
      "comment" : "The title of the view that lists the aisles.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allées"
          }
        }
      }
    },
    "All Medicines" : {
      "comment" : "A tab that lists all medicines.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "fr" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Mon compte"
          }
        }
      }
    },
    "Name" : {
      "comment" : "A sorting option for a list of medicines by name.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "fr" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Trier par"
          }
        }
      }
    },
    "Stock" : {
      "comment" : "A sorting option for a list of medicines by their stock levels.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "fr" : {
          "stringUnit" : {
...
