...
        if showAddButtonAndtextField {
            Button(.addMedicine) {
                hideKeyboard()
                showAddAlert.toggle()
            }
            .buttonStyle(MediPlainButtonStyle())
            .accessibilityIdentifier("addMedicineButton")
            .buttonLoader(isLoading: $viewModel.addingMedicine)
            .padding(.all, 24)
        }
    }

    var addButtonAlert: some View {
...
